# remarkable-nats-agents

./: .gitignore  CLAUDE.md  CMakeLists.txt  HANDOFF-PROMPT.md  IMPLEMENTATION-NOTES.md  READING-NOTES.md  README.md  RM-PARSER-RENDERER.md
config/: agents.example.json
docs/: BUILD-PROMPT.md  FILE-STORE.md  IMPLEMENTATION-NOTES.md  READING-NOTES.md  RM-PARSER-RENDERER.md
scripts/: build-device.sh  deploy.sh  echo-responder.py  inspect-device.sh  run-desktop.sh  smoke-test.py
src/: Main.qml  main.cpp
src/agents/: AgentModel.cpp  AgentModel.h  AgentProtocol.cpp  AgentProtocol.h  AppController.cpp  AppController.h  ChatModel.cpp  ChatModel.h
src/nats/: INatsConnection.h  NatsClient.cpp  NatsClient.h  NatsCreds.cpp  NatsCreds.h
src/notes/: NoteStore.cpp  NoteStore.h
src/qml/: AgentDelegate.qml  ChatView.qml  FlatButton.qml  Keyboard.qml  Main.qml  MessageDelegate.qml  NoteBrowser.qml  RosterView.qml  StepBox.qml  Theme.qml
src/rm/: RmParser.cpp  RmParser.h  RmRenderer.cpp  RmRenderer.h  RmTaggedReader.cpp  RmTaggedReader.h  RmTypes.h
